--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,10 @@
   "browser_action": {
     "default_title": "Githunt",
     "default_icon": "assets/img/icon128.png"
+  },
+  "applications": {
+    "gecko": {
+      "strict_min_version": "54.0"
+    }
   }
 }
